@@ -12,6 +12,7 @@
   [no-id] save & restore rampd register in xmega wdt_enable and wdt_disable
   [#8543] Fix multiple issues with device header files
   [#8563] Generalize power reduction macros in power.h by removing hard coded device names
+  [#8590] WDT enable/disable for devices with CCP
 
 * Other changes:
 
